# lsp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  demo.py  environment.yml  pyproject.toml
src/lsp/: app.py  handlers.py  logger.py  rpc.py  schema.py
tests/: test_rpc.py  test_schema.py
